Refatora GroupDTO para usar UserDTO em vez de UUID
- Adiciona construtor com entidades UserEntity para coordenador e estudantes
- Garante que o DTO traga informações completas dos usuários